// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "OCPP.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ocpp/src (151 matches)
   ✱ Glob "**/*db*" in packages/ocpp (6 matches)
   → Read packages/ocpp/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ocpp/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const OCPP_DB|OCPP_DB|OCPP_DEV|Global\\.Path\\.data|data
     =" in packages/ocpp/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "OCPP.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ocpp/src (151 matches)
   ✱ Glob "**/*db*" in packages/ocpp (6 matches)
   → Read packages/ocpp/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ocpp/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.
   ✱ Grep "export const OCPP_DB|OCPP_DB|OCPP_DEV|Global\\.Path\\.data|data
     =" in packages/ocpp/src (115 matches)"
`;
